fix: added font weight to increase contrasts

--- a/assets/style.css
+++ b/assets/style.css
@@ -65,7 +65,6 @@ p {
 
 :root {
   --primary-color: #009dc4;
-  --secondary-color: #5cff67;
 }
 
 .autoshow {
@@ -93,6 +92,7 @@ p {
 .btn-primary {
   background-color: var(--primary-color);
   border: none;
+  font-weight: 900;
 }
 
 /*
